fix inability to view entire form when screen is too short

--- a/src/app/edit-form/edit-form.component.css
+++ b/src/app/edit-form/edit-form.component.css
@@ -1,7 +1,8 @@
 .editForm {
   background-color: white;
   position: relative;
-  width: 650px;
+  width: clamp(350px, 100%, 650px);
+  margin: 70px auto;
   padding: 25px;
   z-index: 2;
   border-radius: 10px;
@@ -16,10 +17,7 @@
 
 .overlay {
   /* background-color: rgba(0, 0, 0, 30%); */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
+  position: absolute;
   width: 100%;
   top: 0;
   left: 0;
@@ -31,7 +29,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  margin: 10px;
+  margin: 25px;
   background: none;
   border: none;
   cursor: pointer;
